test/should_fail/NonLiteralConst2.oj

@const moo = (4 + 3);
